data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4503.wast
;; 2. **Test Description**: Create a table with function references, including a type that expects zero parameters and returns one value. Use `call_indirect` to call this function with one parameter.    **Constraint Checked**: Verifies that the operand stack is managed properly, and that type mismatches result in a trap.    **Relation to Improper Handling**: Checks if providing extra parameters affects function call integrity.

(assert_invalid
  (module
    (type (func (result i32)))
    (table funcref (elem $func))
    (func $func (result i32) (i32.const 42))
    (func $testfunc
      (call_indirect (type 0) (i32.const 0) (i32.const 1))
    )
  )
  "type mismatch"
)